# edd-schema

./: .env.public  404.html  Boolean.html  Date.html  Datetime.html  Decimal.html  Double.html  Float.html  HttpsIdentifier.html  Integer.html  Makefile  MeasurementType.html  MeasurementUnit.html  MetadataType.html  Ncname.html  Nodeidentifier.html  Objectidentifier.html  Protocol.html  Strain.html  String.html  Time.html  Uri.html  Uriorcurie.html  alt_names.html  alternate_names.html  alternate_names_enum.html  categorization.html  categorization_enum.html  credits.html  db_instance.html  db_instance_enum.html  default_units_id.html  default_value.html  default_value_enum.html  display.html  display_enum.html  edd.Makefile  for_context.html  for_context_enum.html  group_id.html  (+36 more)
AlternateNamesEnum/: index.html
Boolean/: index.html
CategorizationEnum/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
DbInstanceEnum/: index.html
Decimal/: index.html
DefaultValueEnum/: index.html
DisplayEnum/: index.html
Double/: index.html
Float/: index.html
ForContextEnum/: index.html
GeneIdentifier/: index.html
HttpsIdentifier/: index.html
InputTypeEnum/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
MeasurementType/: index.html
MeasurementUnit/: index.html
Metabolite/: index.html
MetadataType/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PrefixEnum/: index.html
ProteinIdentifier/: index.html
(+156 files in other folders)
