[tool.poetry]
name = "edd_schema"
version = "0.1.0"
description = "NON-OFFICIAL linkml rendering of EDD schema"
authors = ["Chris Mungall <cjmungall@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/edd_schema/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"
jupyter = "^1.0.0"
mknotebooks = "*"
schema-automator = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
